--- a/client-manual/deno.json
+++ b/client-manual/deno.json
@@ -1,11 +1,15 @@
 {
   "tasks": {
     "dev": "deno run -A --node-modules-dir=auto npm:vite",
-    "build": "deno run -A --node-modules-dir=auto npm:vite build"
+    "build": "deno run -A --node-modules-dir=auto npm:vite build",
+    "server:start": "deno run -A --node-modules-dir --watch ./server/main.ts",
+    "serve": "deno task build && deno task server:start"
   },
   "imports": {
     "@deno/vite-plugin": "npm:@deno/vite-plugin@^1.0.2",
+    "@oak/oak": "jsr:@oak/oak@^17.1.4",
     "@std/assert": "jsr:@std/assert@1",
+    "@tajpouria/cors": "jsr:@tajpouria/cors@^1.2.1",
     "@types/react": "npm:@types/react@^19.0.7",
     "@vitejs/plugin-react": "npm:@vitejs/plugin-react@^4.3.4",
     "react": "npm:react@^19.0.0",
