--- a/client-manual/deno.json
+++ b/client-manual/deno.json
@@ -14,6 +14,7 @@
     "@vitejs/plugin-react": "npm:@vitejs/plugin-react@^4.3.4",
     "react": "npm:react@^19.0.0",
     "react-dom": "npm:react-dom@^19.0.0",
+    "react-router": "npm:react-router@^7.1.3",
     "react-router-dom": "npm:react-router-dom@^7.1.3",
     "vite": "npm:vite@^6.0.7"
   },
