--- a/client-manual/deno.json
+++ b/client-manual/deno.json
@@ -9,6 +9,7 @@
     "@deno/vite-plugin": "npm:@deno/vite-plugin@^1.0.2",
     "@oak/oak": "jsr:@oak/oak@^17.1.4",
     "@std/assert": "jsr:@std/assert@1",
+    "@tailwindcss/vite": "npm:@tailwindcss/vite@^4.0.0",
     "@tajpouria/cors": "jsr:@tajpouria/cors@^1.2.1",
     "@types/react": "npm:@types/react@^19.0.7",
     "@vitejs/plugin-react": "npm:@vitejs/plugin-react@^4.3.4",
@@ -16,6 +17,8 @@
     "react-dom": "npm:react-dom@^19.0.0",
     "react-router": "npm:react-router@^7.1.3",
     "react-router-dom": "npm:react-router-dom@^7.1.3",
+    "socket.io-client": "npm:socket.io-client@^4.8.1",
+    "tailwindcss": "npm:tailwindcss@^4.0.0",
     "vite": "npm:vite@^6.0.7"
   },
   "compilerOptions": {
