--- a/client-manual/deno.json
+++ b/client-manual/deno.json
@@ -11,7 +11,7 @@
     "@std/assert": "jsr:@std/assert@1",
     "@tailwindcss/vite": "npm:@tailwindcss/vite@^4.0.0",
     "@tajpouria/cors": "jsr:@tajpouria/cors@^1.2.1",
-    "@types/react": "npm:@types/react@^19.0.7",
+    "@types/react": "npm:@types/react@^19.0.8",
     "@vitejs/plugin-react": "npm:@vitejs/plugin-react@^4.3.4",
     "react": "npm:react@^19.0.0",
     "react-dom": "npm:react-dom@^19.0.0",
@@ -19,13 +19,14 @@
     "react-router-dom": "npm:react-router-dom@^7.1.3",
     "socket.io-client": "npm:socket.io-client@^4.8.1",
     "tailwindcss": "npm:tailwindcss@^4.0.0",
-    "vite": "npm:vite@^6.0.7"
+    "vite": "npm:vite@^6.0.7",
+    "@/": "./client/src/",
+    "@components/": "./client/src/components/"
   },
   "compilerOptions": {
     "types": [
       "react",
-      "react-dom",
-      "@types/react"
+      "react-dom"
     ],
     "lib": [
       "dom",
