--- a/session-server/deno.json
+++ b/session-server/deno.json
@@ -6,8 +6,11 @@
   "imports": {
     "@std/assert": "jsr:@std/assert@1",
     "@types/express": "npm:@types/express@^5.0.0",
+    "cors": "npm:cors@^2.8.5",
     "express": "npm:express@^4.21.2",
-    "socket.io": "npm:socket.io@^4.8.1"
+    "socket.io": "npm:socket.io@^4.8.1",
+    "uuid": "npm:uuid@^11.0.5",
+    "@/": "./src/"
   },
   "nodeModulesDir": "auto"
 }
