--- a/ixo-app/package.json
+++ b/ixo-app/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@eslint/js": "^9.22.0",
+    "@stylistic/eslint-plugin-ts": "^4.2.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
