--- a/ixo-app/package.json
+++ b/ixo-app/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "canvas": "^3.1.0",
+    "clsx": "^2.1.1",
+    "konva": "^9.3.20",
     "next": "15.2.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-konva": "^19.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -23,7 +27,9 @@
     "@types/react-dom": "^19",
     "eslint": "^9.22.0",
     "eslint-config-next": "15.2.3",
-    "tailwindcss": "^4",
+    "eslint-plugin-react-compiler": "^19.0.0-beta-e993439-20250328",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.3",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.26.1"
   }
