--- a/ixo-app/package.json
+++ b/ixo-app/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "canvas": "^3.1.0",
+    "cloudinary": "^2.6.0",
     "clsx": "^2.1.1",
     "konva": "^9.3.20",
     "next": "15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-konva": "^19.0.3"
+    "react-konva": "^19.0.3",
+    "use-image": "^1.1.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
