--- a/ixo-app/package.json
+++ b/ixo-app/package.json
@@ -14,6 +14,7 @@
     "clsx": "^2.1.1",
     "konva": "^9.3.20",
     "next": "15.2.3",
+    "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-konva": "^19.0.3",
