--- a/ixo-app/package.json
+++ b/ixo-app/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test:ts": "ts-node --project tsconfig.test.json -r tsconfig-paths/register"
   },
   "dependencies": {
     "canvas": "^3.1.0",
@@ -33,6 +34,7 @@
     "eslint-plugin-react-compiler": "^19.0.0-beta-e993439-20250328",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.3",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.26.1"
   }
