--- a/ixo-app/package.json
+++ b/ixo-app/package.json
@@ -14,6 +14,7 @@
     "cloudinary": "^2.6.0",
     "clsx": "^2.1.1",
     "konva": "^9.3.20",
+    "mongoose": "^8.16.0",
     "next": "15.2.3",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
