- complete auth flow - put everything to db - provide API to create/delete/get config

--- a/ixo-app/.example.env
+++ b/ixo-app/.example.env
@@ -2,5 +2,7 @@ CLOUDINARY_CLOUD_NAME=your_cloud_name
 CLOUDINARY_API_KEY=your_api_key
 CLOUDINARY_API_SECRET=your_api_secret
 
+MONGODB_URI=
+
 NEXTAUTH_SECRET=secret
-MONGO_URI=
+NEXTAUTH_URL=http://localhost:3000
